tests/changelog/write_and_parse/snapshots/integration__changelog__write_and_parse__all_section_types_round_trips_lossy-11.snap
---
source: cool-workspace/tests/changelog/write_and_parse/mod.rs
expression: buf
---
* hello world
	this

##### Thanks Clippy

[Clippy](https://github.com/rust-lang/rust-clippy) helped 42 times to make code idiomatic. 

##### Commit Statistics

 - 100 commits contributed to the release over the course of 32 calendar days.
 - 60 days passed between releases.
 - 20 commits were understood as [conventional](https://www.conventionalcommits.org).
 - 3 unique issues were worked on: #1, Uncategorized, #42

##### Commit Details

<csr-read-only-do-not-edit/>

<details><summary>view details</summary>

 * **#42**
    - Just the title (e69de29)
    - another title (e69de29)
 * **Uncategorized**
    - Just the title (e69de29)
    - title and body (e69de29)
</details>


